package io.github.tt432.eyelib.attachment.dataattach;

/**
 * 数据附属容器的默认实现。
 *
 * @author TT432
 */
public class DataAttachmentContainer extends DataAttachmentMapStorage implements IDataAttachmentContainer {
}