package io.github.tt432.eyelib.util.data_attach;

public interface IDataAttachmentContainer extends DataAttachmentStorage {
}
